--- a/scripts/digilent_arty_a7_35.openocd.cfg
+++ b/scripts/digilent_arty_a7_35.openocd.cfg
@@ -33,7 +33,7 @@ adapter speed 1000
 
 # Prefer to use sba for system bus access
 # (See https://github.com/pulp-platform/riscv-dbg/blob/master/doc/debug-system.md Block Diagram).
-riscv set_prefer_sba on
+# riscv set_prefer_sba on
 
 # Dump jtag chain
 scan_chain
