--- a/gw/components/CMakeLists.txt
+++ b/gw/components/CMakeLists.txt
@@ -55,6 +55,8 @@ add_subdirectory(blackbox)
 add_subdirectory(usb_hid_host)
 add_subdirectory(usb_hid_device)
 add_subdirectory(cdc_cells)
+add_subdirectory(qspiflash)
+
 
 
 
