--- a/gw/components/boxlambda_soc/Bender.yml
+++ b/gw/components/boxlambda_soc/Bender.yml
@@ -24,12 +24,14 @@ dependencies:
   boxlambda_clk_gen: { path: "../../components/boxlambda_clk_gen" }
   blackbox: { path: "../../components/blackbox" }
   usb_hid_host: { path: "../../components/usb_hid_host" }
+  qspiflash: { path: "../../components/qspiflash"}
 
 sources:
   #co-sim stuffs.
   - target: verilator
     files:
       - lint.vlt
+      - ../../../sub/qspiflash/bench/cpp/flashsim.cpp
       - ../../../sub/wbuart32/bench/cpp/uartsim.cpp
       - ../../../sub/riscv-dbg/tb/remote_bitbang/sim_jtag.c
       - ../../../sub/riscv-dbg/tb/remote_bitbang/remote_bitbang.c
