--- a/gw/projects/CMakeLists.txt
+++ b/gw/projects/CMakeLists.txt
@@ -370,3 +370,4 @@ endif()
 add_subdirectory(picorv_dma_sys_test_ext)
 add_subdirectory(dual_port_ram_test)
 add_subdirectory(usb_hid_sys_test)
+add_subdirectory(qspi_flash_test)
