--- a/sw/components/CMakeLists.txt
+++ b/sw/components/CMakeLists.txt
@@ -6,4 +6,5 @@ add_subdirectory(stsound)
 add_subdirectory(picorv_dma/test)
 add_subdirectory(picorv_dma)
 add_subdirectory(usb_hid)
+add_subdirectory(flashdrvr)
 
