boot from flash support in bootstrap component

--- a/sw/components/bootstrap/CMakeLists.txt
+++ b/sw/components/bootstrap/CMakeLists.txt
@@ -19,5 +19,8 @@ target_include_directories(bootstrap
 
 target_compile_options(bootstrap
  PRIVATE
+  -g
   -O2
+  -mno-save-restore
+  -fno-tree-loop-distribute-patterns
 )
