boot from flash working

--- a/gw/components/CMakeLists.txt
+++ b/gw/components/CMakeLists.txt
@@ -1,28 +1,28 @@
 #Function grouping gateware component build rules.
 #TOP_MODULE: name of top module.
 #COMPONENT_NAME: component name, e.g. wbuart32
-#VERILATOR_CPP_FLAGS: CPP flags to use when verilating. Usually empty. 
-#VERILATOR_LD_FLAGS: LD flags to use when verilating. Usually empty. 
+#VERILATOR_CPP_FLAGS: CPP flags to use when verilating. Usually empty.
+#VERILATOR_LD_FLAGS: LD flags to use when verilating. Usually empty.
 function (gw_component_rules)
-    set(options)
-    set(oneValueArgs TOP_MODULE COMPONENT_NAME VERILATOR_CPP_FLAGS VERILATOR_LD_FLAGS)
-    set(multiValueArgs)
-    
-    cmake_parse_arguments(gw_component_rules
+  set(options)
+  set(oneValueArgs TOP_MODULE COMPONENT_NAME VERILATOR_CPP_FLAGS VERILATOR_LD_FLAGS)
+  set(multiValueArgs)
+
+  cmake_parse_arguments(gw_component_rules
         "${options}"
         "${oneValueArgs}"
         "${multiValueArgs}"
         ${ARGN}
     )
 
-    set(_top_module ${gw_component_rules_TOP_MODULE}) 
-    set(_comp_name ${gw_component_rules_COMPONENT_NAME})
-    set(_verilator_cpp_flags ${gw_component_rules_VERILATOR_CPP_FLAGS})
-    set(_verilator_ld_flags ${gw_componeny_rules_VERILATOR_LD_FLAGS})
+  set(_top_module ${gw_component_rules_TOP_MODULE})
+  set(_comp_name ${gw_component_rules_COMPONENT_NAME})
+  set(_verilator_cpp_flags ${gw_component_rules_VERILATOR_CPP_FLAGS})
+  set(_verilator_ld_flags ${gw_componeny_rules_VERILATOR_LD_FLAGS})
 
-    #Forward to gw_common_rules() function. gw_common_rules() build logic is shared between 
-    #gw components and projects.
-    gw_common_rules(
+  #Forward to gw_common_rules() function. gw_common_rules() build logic is shared between
+  #gw components and projects.
+  gw_common_rules(
         TOP_MODULE
             ${_top_module}
         PRJ_COMP_NAME
@@ -55,7 +55,7 @@ add_subdirectory(blackbox)
 add_subdirectory(usb_hid_host)
 add_subdirectory(usb_hid_device)
 add_subdirectory(cdc_cells)
-add_subdirectory(qspiflash)
+add_subdirectory(spiflash)
 
 
 
