--- a/gw/projects/picorv_dma_sys_test_ext/CMakeLists.txt
+++ b/gw/projects/picorv_dma_sys_test_ext/CMakeLists.txt
@@ -1,8 +1,8 @@
 #FPGA and simulation builds have different top-levels.
 if(CMAKE_BUILD_TYPE STREQUAL "fpga")
-    set(top_module top)
+  set(top_module boxlambda_top)
 else()
-    set(top_module sim_main)    
+  set(top_module sim_main)
 endif()
 
 #gw_project_rules() function is defined in the parent CMakeLists.txt.
@@ -10,9 +10,9 @@ gw_project_rules(
     TOP_MODULE ${top_module}
     PROJECT_NAME picorv_dma_sys_test_ext
     MEM_FILE_TARGET picorv_dma_sys_test_ext
-    VERILATOR_CPP_FLAGS 
+    VERILATOR_CPP_FLAGS
         "-I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/ -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang"
-    VERILATOR_LD_FLAGS 
+    VERILATOR_LD_FLAGS
         -lncurses
 )
 
