--- a/gw/projects/vera_integrated/CMakeLists.txt
+++ b/gw/projects/vera_integrated/CMakeLists.txt
@@ -1,14 +1,14 @@
 #FPGA and simulation builds have different top-levels.
 if(CMAKE_BUILD_TYPE STREQUAL "fpga")
-    set(top_module top)
+  set(top_module boxlambda_top)
 else()
-    set(top_module sim_main)
+  set(top_module sim_main)
 endif()
 
 if(CMAKE_BUILD_TYPE STREQUAL "sim")
-    SET_PROPERTY(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS TRUE)
-    #This build has an SDL dependency. VERA's VGA output is rendered onto an SDL window.
-    find_package(SDL2 REQUIRED)
+  SET_PROPERTY(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS TRUE)
+  #This build has an SDL dependency. VERA's VGA output is rendered onto an SDL window.
+  find_package(SDL2 REQUIRED)
 endif()
 
 #gw_project_rules() function is defined in the parent CMakeLists.txt.
@@ -16,9 +16,9 @@ gw_project_rules(
     TOP_MODULE ${top_module}
     PROJECT_NAME vera_integrated
     MEM_FILE_TARGET vera_test
-    VERILATOR_CPP_FLAGS 
+    VERILATOR_CPP_FLAGS
         "-g -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/ -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang -I${SDL2_INCLUDE_DIRS}"
-    VERILATOR_LD_FLAGS 
+    VERILATOR_LD_FLAGS
         "-g -lncurses ${SDL2_LIBRARIES}"
 )
 
