--- a/gw/projects/fatfs_test/CMakeLists.txt
+++ b/gw/projects/fatfs_test/CMakeLists.txt
@@ -1,9 +1,9 @@
 #FPGA and simulation builds have different top-levels.
 if(CMAKE_BUILD_TYPE STREQUAL "fpga")
-    set(top_module top)
-    
+  set(top_module boxlambda_top)
+
 else()
-    set(top_module sim_main)
+  set(top_module sim_main)
 endif()
 
 set(sw_project fatfs_test)
@@ -13,9 +13,9 @@ gw_project_rules(
     TOP_MODULE ${top_module}
     PROJECT_NAME fatfs_test
     MEM_FILE_TARGET ${sw_project}
-    VERILATOR_CPP_FLAGS 
+    VERILATOR_CPP_FLAGS
         "-I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/ -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang -I${PROJECT_SOURCE_DIR}/sub/sdspi/bench/cpp"
-    VERILATOR_LD_FLAGS 
+    VERILATOR_LD_FLAGS
         -lncurses
 )
 
