--- a/gw/projects/sdspi_test/Bender.yml
+++ b/gw/projects/sdspi_test/Bender.yml
@@ -8,7 +8,7 @@ package:
 dependencies:
   # Path dependency.
   boxlambda_soc: { path: "../../components/boxlambda_soc" }
-  
+
 sources:
   - target: constraints
     files:
@@ -26,7 +26,7 @@ sources:
       #PICORV_DMA: ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
-      - ../top/rtl/top.sv
+      - ../boxlambda_top/rtl/boxlambda_top.sv
   - target: arty-a7-100
     defines:
       VRAM_SIZE_BYTES: 131072
@@ -40,11 +40,11 @@ sources:
       #PICORV_DMA: ~
       #TRACE_ALL_INSTRUCTIONS: ~
     files:
-      - ../top/rtl/top.sv
+      - ../boxlambda_top/rtl/boxlambda_top.sv
   - target: verilator
     files:
       - sim/sim_main.cpp
-      - ../top/sim/sim_main.sv
-      - ../top/lint.vlt
-            
+      - ../boxlambda_top/sim/sim_main.sv
+      - ../boxlambda_top/lint.vlt
+
 
