--- a/gw/projects/sdspi_test/CMakeLists.txt
+++ b/gw/projects/sdspi_test/CMakeLists.txt
@@ -1,8 +1,8 @@
 #FPGA and simulation builds have different top-levels.
 if(CMAKE_BUILD_TYPE STREQUAL "fpga")
-    set(top_module top)
+  set(top_module boxlambda_top)
 else()
-    set(top_module sim_main)    
+  set(top_module sim_main)
 endif()
 
 set(sw_project sdspi_test)
@@ -12,9 +12,9 @@ gw_project_rules(
     TOP_MODULE ${top_module}
     PROJECT_NAME sdspi_test
     MEM_FILE_TARGET ${sw_project}
-    VERILATOR_CPP_FLAGS 
+    VERILATOR_CPP_FLAGS
         "-I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/ -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang -I${PROJECT_SOURCE_DIR}/sub/sdspi/bench/cpp"
-    VERILATOR_LD_FLAGS 
+    VERILATOR_LD_FLAGS
         -lncurses
 )
 
@@ -25,4 +25,4 @@ add_test(NAME sdspi_test_test
 )
 
 #This test requires a longer timeout.
-set_tests_properties(sdspi_test_test PROPERTIES TIMEOUT 400) 
+set_tests_properties(sdspi_test_test PROPERTIES TIMEOUT 400)
