--- a/gw/components/spiflash/Bender.yml
+++ b/gw/components/spiflash/Bender.yml
@@ -5,17 +5,14 @@ package:
   # The name of the package. Required.
   name: spiflash
 
-dependencies:
-  # Path dependency.
-  wbxbar: { path: "../wbxbar" }
-
 sources:
   - target: verilator
     files:
      - lint.vlt
   - target: any(verilator, vivado)
     files:
-     - ../../../sub/qspiflash/rtl/spixpress.v
+     - rtl/spiflash.v
+
 
 
 
