--- a/gw/components/spiflash/CMakeLists.txt
+++ b/gw/components/spiflash/CMakeLists.txt
@@ -1,5 +1,5 @@
 #gw_component_rules() function is defined in the parent CMakeLists.txt.
 gw_component_rules(
-    TOP_MODULE  spixpress
+    TOP_MODULE  spiflash
     COMPONENT_NAME spiflash
 )
