--- a/sw/components/flashdrvr/CMakeLists.txt
+++ b/sw/components/flashdrvr/CMakeLists.txt
@@ -1,20 +1,12 @@
 add_library(flashdrvr)
 
-#Flash driver source plus some supporting files from ZipCPU's qspiflash project
+#Flash driver sources plus some supporting files originally from ZipCPU's qspiflash project
 #https://github.com/ZipCPU/qspiflash
 
 target_sources(flashdrvr
     PRIVATE
-    ../../../sub/qspiflash/sw/flashdrvr.cpp
+    flashdrvr.cpp
     byteswap.cpp
-)
-
-#R_FLASHCFG: Address of the configuration register of the flash core.
-#R_FLASH: Base address of flash memory.
-#R_FLASH_LEN: Length of flash memory.
-target_compile_definitions(flashdrvr
- PUBLIC
-  -DR_FLASHCFG=0x100000C0 -DR_FLASH=0x11000000 -DR_FLASH_LEN=0x01000000 -DFLASH_ACCESS
 )
 
 target_compile_options(flashdrvr
@@ -24,6 +16,6 @@ target_compile_options(flashdrvr
 
 target_include_directories(flashdrvr
     PUBLIC
-    ../../../sub/qspiflash/sw/
     ${CMAKE_CURRENT_LIST_DIR}
 )
+
