--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ nav:
         - LiteDRAM Memory Controller: components_litedram.md
         - VERA (Wishbone) Graphics: components_vera.md
         - SDSPI SD Card Controller: components_sdspi.md
+        - SPI Flash Controller: components_spiflash.md
         - Dual YM2149 PSG Sound Core: components_dual_ym2149.md
         - PicoRV DMA Controller: components_picorv_dma.md
         - USB HID Keyboard and Mouse: components_usb_hid.md
@@ -47,17 +48,18 @@ nav:
         - Miscellaneous: components_misc.md
     - Software Components:
         - LiteDRAM Initialization: sw_comp_litedram_initialization.md
-        - PicoLibc: sw_comp_picolibc.md
+        - PicoLibc and Bootstrap: sw_comp_picolibc.md
         - FatFs: sw_comp_fat_fs.md
         - ST-Sound: sw_comp_st_sound.md
         - YM2149 HAL: sw_comp_ym2149_hal.md
         - PicoRV DMA HAL: sw_comp_picorv_dma_hal.md
         - USB HID: sw_comp_usb_hid.md
+        - Flash Driver: sw_comp_flashdrvr.md
     - Installation:
         - Prerequisites: prerequisites.md
         - Peripherals (PMODs): pmods.md
         - Installation: installation.md
-    - Test Builds: 
+    - Test Builds:
         - Hello World: test-build-hello-world.md
         - DDR Test: test-build-ddr.md
         - VERA Test: test-build-vera.md
@@ -66,5 +68,5 @@ nav:
         - PicoRV DMA Test: test-build-picorv-dma.md
         - Dual Port RAM Test: test-build-dpram.md
         - USB HID Keyboard and Mouse Test: test-build-usb-hid.md
-
+        - SPI Flash Test: test-build-spi-flash.md
 
