--- a/sw/components/CMakeLists.txt
+++ b/sw/components/CMakeLists.txt
@@ -7,4 +7,5 @@ add_subdirectory(picorv_dma/test)
 add_subdirectory(picorv_dma)
 add_subdirectory(usb_hid)
 add_subdirectory(flashdrvr)
+add_subdirectory(timer)
 
