--- a/gw/components/wb_timer/CMakeLists.txt
+++ b/gw/components/wb_timer/CMakeLists.txt
@@ -1,5 +1,5 @@
 #gw_component_rules() function is defined in the parent CMakeLists.txt.
 gw_component_rules(
-    TOP_MODULE wb_wbuart_ooc
-    COMPONENT_NAME wbuart32 
+    TOP_MODULE wb_timer
+    COMPONENT_NAME wb_timer
 )
