--- a/sw/projects/usb_hid_sys_test/CMakeLists.txt
+++ b/sw/projects/usb_hid_sys_test/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 add_executable(usb_hid_sys_test
  EXCLUDE_FROM_ALL
- usb_hid_sys_test.c
+ usb_hid_sys_test.cpp
  ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/gpio.c
  ../../../sub/ibex_wb/soc/fpga/arty-a7/sw/libs/soc/utils.c
 )
